{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 32,
  "lineage": "ec26c9ce-952c-85a3-8781-c4761b758d5a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0a273193c026e44",
            "arn": "arn:aws:ec2:eu-west-3:836821974678:elastic-ip/eipalloc-0f0a273193c026e44",
            "association_id": "eipassoc-09895a9aa95a05f96",
            "domain": "vpc",
            "id": "eipalloc-0f0a273193c026e44",
            "instance": "i-0b639639925975fef",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-012e068b9e67c87c1",
            "private_dns": "ip-172-31-9-77.eu-west-3.compute.internal",
            "private_ip": "172.31.9.77",
            "public_dns": "ec2-13-37-54-54.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.37.54.54",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "fsanzbae05"
            },
            "tags_all": {
              "Name": "fsanzbae05"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.vm",
            "aws_key_pair.clave",
            "aws_security_group.allow_http",
            "aws_security_group.ssh",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-003fbbff8c6fa2c7a",
            "arn": "arn:aws:ec2:eu-west-3:836821974678:instance/i-0b639639925975fef",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b639639925975fef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "fsanzbae05",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-012e068b9e67c87c1",
            "private_dns": "ip-172-31-9-77.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.9.77",
            "public_dns": "ec2-35-180-14-49.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.14.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f6fabe6228d45aed",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_http-fsanzbae05",
              "allow_ssh_fsanzbae05"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-52e1e13b",
            "tags": {
              "Name": "fsanzbae05"
            },
            "tags_all": {
              "Name": "fsanzbae05"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0392907e27d12605d",
              "sg-062b2decccbb53eb1"
            ]
          },
          "dependencies": [
            "aws_key_pair.clave",
            "aws_security_group.allow_http",
            "aws_security_group.ssh",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:836821974678:security-group/sg-0392907e27d12605d",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0392907e27d12605d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http-fsanzbae05",
            "name_prefix": "",
            "owner_id": "836821974678",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-c2df3aaa"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:836821974678:security-group/sg-062b2decccbb53eb1",
            "description": "Permite la conexion ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062b2decccbb53eb1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_fsanzbae05",
            "name_prefix": "",
            "owner_id": "836821974678",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_fsanzbae05"
            },
            "tags_all": {
              "Name": "allow_ssh_fsanzbae05"
            },
            "timeouts": null,
            "vpc_id": "vpc-c2df3aaa"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}